# yeg-recreation

./: LICENSE  README  README.md  stack.yaml  yeg-recreation.cabal
app/: .Main.hs.swp  Main.hs  YEGImport.hs  YEGWeb.hs
src/YEGRec/: Configuration.hs  DB.hs  Middleware.hs  Migrate.hs  Parse.hs  Types.hs  Util.hs  XMLUtil.hs
test/: Spec.hs  full_feed.rss  input.rss  one_event.rss  three_events.rss  zero_events.rss
