name:                yeg-recreation
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/cmoresid/yeg-recreation#readme
license:             BSD3
license-file:        LICENSE
author:              Connor Moreside 
maintainer:          connor@moresi.de
copyright:           2016 Connor Moreside
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable yeg-recreation
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
