name:                yeg-recreation
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/cmoresid/yeg-recreation#readme
license:             BSD3
license-file:        LICENSE
author:              Connor Moreside
maintainer:          connor@moresi.de
copyright:           2016 Connor Moreside
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
                     , HTTP
                     , time
                     , xml
                     , regexpr
                     , tagsoup
                     , split
                     , text
                     , containers
  exposed-modules:     YEGRec.Types
                     , YEGRec.Parse
                     , YEGRec.Util
                     , YEGRec.XMLUtil
  default-language:    Haskell2010

executable yeg-recreation-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , yeg-recreation
  default-language:    Haskell2010

test-suite yeg-recreation-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , yeg-recreation
                     , hspec
                     , time
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/cmoresid/yeg-recreation
